--- a/style.css
+++ b/style.css
@@ -30,12 +30,9 @@ header {
   align-items: center;
 }
 
-.logo {
-  font-weight: 800;
-  letter-spacing: 2px;
-  text-decoration: none;
-  color: white;
-  font-size: 1.1rem;
+.logo img {
+  height: 45px;   /* juster størrelse her */
+  display: block;
 }
 
 .logo:hover {
@@ -237,3 +234,4 @@ footer {
   }
 
 }
+
