--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background: linear-gradient(145deg, #110E15, #1a1118);
   color: white;
   line-height: 1.6;
@@ -234,6 +234,7 @@ footer {
   }
 
 }
+
 
 
 
